readme and changelog modified.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+slack_irc_rt_gate Version 0.0.3
+--------------------------------------------
+Not yet released
+
+
 Release Notes - Slackbot - Version 0.5.2
 --------------------------------------------
 This release contains the following new features:
